<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="userViewModel"
            type="com.example.dequote.viewmodels.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.account.login.LoginFragment">

        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/ic_baseline_format_quote_24"
            app:layout_constraintEnd_toStartOf="@id/tvAppLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAppLabel"
            style="@style/TextAppearance.MaterialComponents.Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgAppLogo"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/hint_email"
            app:helperText="@{userViewModel.userEmailErrorText}"
            app:helperTextTextColor="@color/design_default_color_error"
            app:layout_constraintTop_toBottomOf="@id/tvAppLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{userViewModel.afterTextChangedOnEmail}"
                android:inputType="textEmailAddress"
                android:textColorHint="#616161" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:hint="@string/hint_password"
            app:helperText="@{userViewModel.userPasswordErrorText}"
            app:helperTextTextColor="@color/design_default_color_error"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{userViewModel.afterTextChangedOnPassword}"
                android:inputType="textPassword"
                android:maxLength="8"
                android:textColorHint="#616161" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/label_login"
            app:layout_constraintTop_toBottomOf="@id/tilPassword" />

        <TextView
            android:id="@+id/tvCreateNewAccount"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/label_create_new_account"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>